--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^6.3.0",
     "react-router-guards": "^1.0.2",
     "react-scripts": "5.0.1",
+    "router": "^1.3.7",
+    "sass": "^1.54.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
